--- a/cgi-bin/css/appt.css
+++ b/cgi-bin/css/appt.css
@@ -96,7 +96,6 @@ input[type=submit], button {
     font-size: 12px;
     font-weight: bold;
     margin-bottom: 10px;
-
     background: none repeat scroll 0 0 #999999;
     color: white;
 }
@@ -177,9 +176,9 @@ input[type=submit]:active, button:active {
 	border-collapse: collapse;
 }
 
-.content_table tr:hover{
+/*.content_table tr:hover{
 	box-shadow: 0px 0px 5px 5px #000000;
-}
+}*/
 .content_table tr:nth-child(odd) { background-color:#DBDBDB; }
 .content_table tr:nth-child(even) { background-color:#FCFCFC; }
 .content_table td{
